                                     Xbox Media Center CHANGELOG
************************************************************************************************************* 
*************************************************************************************************************

added/fixed: (dd-mm-yyyy) (please specify date in CET)
 - 29-04-2006 fixed: [ 1478357 ] Umlaute in movie/music info and scripts
 - 29-04-2006 fixed: [ 1478354 ] Python "overlapping of lines"
 - 29-04-2006 fixed: shoutcast urls now work with http api.
 - 29-04-2006 fixed: (hopefully) [ 1476918 ] Thumbnail/Icon for all homebrew games uses Super Mario War
 - 29-04-2006 changed: visualisation preset and lockstate are now remembered between windows and sessions.
 - 29-04-2006 fixed: Deletion of stacked files didn't work.
 - 29-04-2006 fixed: Thumbs for filenames with non-ascii characters didn't show in Album and Movie Info screens.
 - 29-04-2006 changed: Stack button can now be a radiobutton.
 - 29-04-2006 fixed: my programs, wrong item could be selected after eject/load in context menu was used.
 - 29-04-2006 fixed: [ 1478235 ] Little XBMC info issues.
 - 28-04-2006 fixed: shoutcast servers that returned "playlist" as content-type wouldn't play.
 - 28-04-2006 fixed: paplayer can record (mp3)shoutcast now too.
 - 28-04-2006 removed: Return to My Music context menu item in Now Playing window, and made the "back" commands go to My Music instead of the previous window (eg Visualisation)
 - 28-04-2006 changed: B in now playing should return to My Music.  Back in Slideshow should stop the slideshow.
 - 28-04-2006 fixed: Player.Duration and Player.TimeRemaining would return 00:00 if duration was available.
 - 28-04-2006 fixed: Video database views with large numbers of videos took a long time (needs rescan if you want genre information in the skin using ListItem.Genre).
 - 28-04-2006 fixed: Deletion and Editting of multi-path bookmarks.