@@ -5,6 +5,7 @@
 *************************************************************************************************************
 
 added/fixed: (dd-mm-yyyy) (please specify date in CET)
+ - 29-04-2006 fixed: Possible crashes when accessing nonexistent seekbar.
  - 29-04-2006 fixed: [ 1478357 ] Umlaute in movie/music info and scripts
  - 29-04-2006 fixed: [ 1478354 ] Python "overlapping of lines"
  - 29-04-2006 fixed: shoutcast urls now work with http api.
